# End-to-End-ML-Feature-Pipeline-Online-Serving

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
config/: config.yaml  feature_definitions.yaml
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  prometheus.yml
k8s/configmaps/: app-config.yaml
k8s/deployments/: api-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml  worker-deployment.yaml
k8s/services/: api-service.yaml
scripts/: generate_proto.sh  generate_test_data.py  setup_db.sh  setup_kafka.sh
src/: __init__.py
src/api/: __init__.py  grpc_server.py  rest_api.py
src/api/proto/: feature_service.proto
src/backfill/: __init__.py  historical_pipeline.py
src/core/: __init__.py  ab_testing.py  feature_store.py  registry.py  schemas.py  validators.py
src/features/: __init__.py  batch_features.py  realtime_features.py
src/features/definitions/: __init__.py  transaction_features.py  user_features.py
src/ingestion/: __init__.py  kafka_consumer.py  transformers.py
src/ml/: __init__.py  fraud_model.py
src/storage/: __init__.py  point_in_time.py  postgres_store.py  redis_store.py
src/utils/: __init__.py  logging.py  metrics.py
tests/integration/: test_end_to_end.py
tests/performance/: test_inference.py  test_latency.py
tests/unit/: test_ab_testing.py  test_redis_store.py  test_registry.py  test_transformers.py
